# hived

./: .gitignore  README.md  audisp_listener.py  audispd_listener.py  config.py  hivectl  hivectl.py  hived  hived.py  hivesecd.py  install.sh  test-launch.sh  uninstall.sh  update.sh  version.sh
.github/workflows/: pypi.yml
.opencode/skills/hivesec-development/: SKILL.md
api/: README.md  __init__.py  audit_event.py  audit_event_handler.py  audit_event_observer.py  hivectl_plugin.py  pyproject.toml
api/src/hivedapi/: hivectl_plugin.py
api/src/hivesec/: __init__.py  audit_event.py  audit_event_handler.py  hivectl_plugin.py
api/src/hivesec/utils/: parsing.py
config/: config.py  notifier_config.py
core/: audispd_listener.py  audit_event.py  audit_event_dispatcher.py  audit_event_handler.py  event.py  event_handler.py  external.py  hived_logger.py  log.py  logger.py  modules.py  notifier.py  observer.py  plugin.py
docs/: README.md  development.md  installation.md
docs_wip/: README-getting-started.md  README-installation.md  README-main.md  README-modules.md
documentation/: hived.drawio
event_handlers/: filesystem_event_handler.py
handlers/: filesystem_handler.py  honeypot_file_handler.py
modules/discord_notifier/: notifiers.py
modules/filesystem/: audit_event_handler.py  audit_event_handlers.py  event_handler.py  plugin.py
notifiers/: discord_webhook_notifier.py
plugins/: filesystem_plugin.py  honeypot_file_plugin.py
utils/: import_utils.py  path_utils.py  translations.py
