[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "h1ve"
version = "0.1.0"
description = "The official API for Hived"
readme = "README.md"
authors = [{ name = "Arianne", email = "hived@shied.arianne.dev" }]
license = { file = "LICENSE" }
keywords = ["hived", "hive", "linux", "audit", "framework"]

[project.urls]
Homepage = "https://github.com/ariannelafraise/hived"

[project.scripts]
realpython = "reader.__main__:main"
