[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hivesec"
version = "1.3.0"
description = "The official API for HiveSec"
readme = "README.md"
authors = [{ name = "Arianne" }]
license = { file = "LICENSE" }
keywords = ["hivesec", "hive", "linux", "audit", "framework"]

[project.urls]
Homepage = "https://github.com/ariannelafraise/hivesec"
